# per-ankh

./: .env.development  .env.example  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  _headers  dev.sh  eslint.config.js  package-lock.json  package.json  per-ankh  per-ankh.sh  svelte.config.js  tailwind.config.js  vite.config.js  wrangler.toml
.github/: RELEASE_TEMPLATE.md
cloud/: .dev.vars.example  .gitignore  admin.sh  package-lock.json  package.json  schema.sql  tsconfig.test.json  vitest.config.mts  vitest.config.ts  wrangler.toml
docs/: TODO-appender-migration.md  aggregate-statistics-charts-status.md  aggregate-statistics-design.md  aggregate-statistics-implementation-notes.md  aggregate-statistics-per-nation-status.md  aggregate-statistics-redesign-status.md  aggregate-statistics-tournament-removal-status.md  aggregate-statistics.md  api-reference.md  app_state.sql  asset-support-proposal.md  asvs-l2-review.html  backward-compatibility-memory-parser.md  benchmark-results-2025-11-07.md  benchmark-results-2025-11-11-hybrid-parser.md  bug-human-nation-detection.md  bug-index-corruption-analysis.md  building-per-ankh-for-speed.md  bundle-hieroglyph-font.md  c4-model.html  chart-sizing-issue.md  cloud-deploy-plan.md  cloud-productionization-plan.md  cloud-rewrite-spec.md  cloudflare-architecture.md  deployment.md  (+75 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml  config.toml.example
src-tauri/capabilities/: default.json
src-tauri/examples/: analyze_database.rs  import_save.rs  query_matches.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/db/: app_state.rs  collections.rs  connection.rs  mod.rs  schema.rs  settings.rs
src-tauri/src/db/queries/: admin.rs  games.rs  history.rs  map.rs  match_data.rs  mod.rs  share.rs
src-tauri/src/parser/: game_data.rs  id_mapper.rs  import.rs  mod.rs  save_file.rs  tests.rs  utils.rs  xml_loader.rs
src-tauri/src/parser/entities/: character_data.rs  characters.rs  cities.rs  city_data.rs  diplomacy.rs  events.rs  families.rs  mod.rs  player_data.rs  players.rs  religions.rs  tile_data.rs  tiles.rs  timeseries.rs  tribes.rs  unit_production.rs
src-tauri/src/parser/inserters/: character_data.rs  characters.rs  cities.rs  city_data.rs  diplomacy.rs  events.rs  families.rs  mod.rs  player_data.rs  players.rs  religions.rs  tile_data.rs  tiles.rs  timeseries.rs  tribes.rs  unit_production.rs  units.rs
src-tauri/src/parser/parsers/: character_data.rs  characters.rs  cities.rs  city_data.rs  diplomacy.rs  events.rs  families.rs  match_metadata.rs  mod.rs  player_data.rs  players.rs  religions.rs  tile_data.rs  tiles.rs  timeseries.rs  tribes.rs  unit_production.rs  units.rs
src-tauri/tests/: benchmark_import.rs  schema_test.rs  test_full_import.rs  test_milestone3_import.rs  unit_production_test.rs  winner_extraction_test.rs
(+671 files in other folders)
