[package]
name = "per-ankh"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "per_ankh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.1", features = ["bundled"] }
anyhow = "1.0"  # Application-level error handling
thiserror = "1.0"  # Custom error types for libraries
zip = "2.2"  # ZIP archive handling for save files
roxmltree = "0.19"  # DOM-based XML parsing (replaced quick-xml)
log = "0.4"  # Logging facade
env_logger = "0.11"  # Logging implementation for development
lazy_static = "1.4"  # Global state for import locks

