[package]
name = "per-ankh"
version = "0.1.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "per-ankh"
[[bin]]
name = "per-ankh"
path = "src/main.rs"

# Dev tools moved to examples/ to avoid Tauri bundling them
[[example]]
name = "benchmark_parsing"
path = "examples/benchmark_parsing.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "per_ankh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.1", features = ["bundled"] }
anyhow = "1.0"  # Application-level error handling
thiserror = "1.0"  # Custom error types for libraries
zip = "2.2"  # ZIP archive handling for save files
roxmltree = "0.19"  # DOM-based XML parsing (replaced quick-xml)
log = "0.4"  # Logging facade
fern = "0.7"  # Multi-output logging (console + file)
lazy_static = "1.4"  # Global state for import locks
sha256 = "1.5"  # SHA-256 hashing for file integrity
chrono = "0.4"  # Date and time parsing
ts-rs = "10.0"  # TypeScript type generation from Rust
rayon = "1.10"  # Parallel iteration for hybrid parser

[dev-dependencies]
tempfile = "3.8"  # Temporary directories for tests

